--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <div id="snow-layer-1" class="snow-layer"></div>
+<div id="snow-layer-2" class="snow-layer"></div>
+<div id="snow-layer-3" class="snow-layer"></div>
     <div id="matrix-background"></div>
    <nav>
        <ul>
